<resources>
    <string name="app_name">TRL3LG</string>
    <string name="version">Version:</string>

    <!--titles-->
    <string name="sign_up_title">Sign Up</string>
    <string name="on_demand_title">Audio Books</string>
    <string name="cd_title">CD</string>
    <string name="catalog_title">Catalog</string>
    <string name="user_title">User</string>

    <!-- Common -->
    <string name="default_empty_list_message_text">Empty list.</string>
    <string name="default_empty_query_message_text">No matches found.</string>
    <string name="error_no_connection">Failed to establish a connection to the server</string>
    <string name="error_required_field">This field can\'t be empty</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_passwords_match">Passwords do not match</string>


    <string name="act_auth_hint_login">Email</string>
    <string name="act_auth_hint_password">Password</string>
    <string name="act_auth_sign_up">sign up</string>
    <string name="act_auth_sign_in">sign in</string>
    <string name="act_auth_forgot_your_username_or_password"><u>Forgot your username or password</u></string>
    <string name="act_auth_select_a_domain">Select a domain</string>
    <string name="please_wait">Please wait…</string>

    <string name="act_sign_up_submit">Submit</string>
    <string name="act_on_demand_btn_activate">Activate</string>
    <string name="act_on_demand_btn_listen_now">Listen now</string>
    <string name="act_book_tv_release_date" formatted="true">Release Date: %s</string>
    <string name="act_book_available" formatted="true">Available: %s</string>
    <string name="act_book_approx_length" formatted="true">Appr. Length: %s</string>
    <string name="act_book_author" formatted="true">Author: %s</string>
    <string name="act_book_language" formatted="true">Language: %s</string>
    <string name="act_book_tv_rating">Rating:</string>

    <string name="last_day">Last day</string>
    <string name="days_left" formatted="true">Days left: %d</string>

    <string name="book_added_to_queue">Currently in Queue</string>
    <string name="book_previously_rented">Previously Rented</string>

    <string name="add_to_queue">Add to queue</string>
    <string name="activate">Activate</string>
    <string name="play">Play</string>
    <string name="chapters">Chapters</string>
    <string name="renew">Renew</string>
    <string name="description">Description</string>
    <string name="read_more">Read more</string>
    <string name="reviews">Reviews</string>
    <string name="no_reviews">No reviews</string>
    <string name="read_all_reviews">Read all reviews</string>
    <string name="rate_the_book">Rate the book</string>
    <string name="next">Next</string>
    <string name="status">Status</string>
    <string name="write_a_short_review">Write a short review</string>
    <string name="comment">Comment</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="filter">Filter</string>
    <string name="ask_rent_book" formatted="true">Are you sure you want to activate %s?</string>
    <string name="review_date" formatted="true">Date: %s</string>


    <string name="review_helpful">Was this review helpful?</string>
    <string name="review_helpful_btn_positive">Yes</string>
    <string name="review_helpful_btn_negative">No</string>


    <!--UserScreen-->
    <string name="frg_user_tv_name">Name</string>
    <string name="frg_user_tv_email">Email</string>
    <string name="frg_user_tv_pass">Password</string>

    <string name="frg_user_tv_version" formatted="true">Version: %s</string>
    <string name="frg_user_app_version_unknown">Version: Unknown</string>

    <string name="frg_user_btn_send_logs">Send Logs</string>
    <string name="frg_user_btn_logout">Logout</string>
    <string name="select_filter_dialog_title">Select a filter</string>

    <string name="act_download_status_pending">Pending</string>
    <string name="act_download_status_active">Active</string>

</resources>
