<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/frg_user_ll_name"
        style="@style/userScreenLinerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/userScreenTextView"
            android:text="@string/frg_user_tv_name" />

        <EditText
            android:id="@+id/frg_user_edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frg_user_ll_email"
        style="@style/userScreenLinerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_user_ll_name">

        <TextView
            style="@style/userScreenTextView"
            android:text="@string/frg_user_tv_email" />

        <EditText
            android:id="@+id/frg_user_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frg_user_ll_password"
        style="@style/userScreenLinerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_user_ll_email">

        <TextView
            style="@style/userScreenTextView"
            android:text="@string/frg_user_tv_pass" />

        <EditText
            android:id="@+id/frg_user_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1" />

    </LinearLayout>

    <Button
        android:id="@+id/frg_user_btn_send_logs"
        style="@style/userScreenButton"
        android:layout_marginTop="36dp"
        android:text="@string/frg_user_btn_send_logs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_user_ll_password" />

    <Button
        android:id="@+id/frg_user_btn_logout"
        style="@style/userScreenButton"
        android:layout_marginTop="24dp"
        android:text="@string/frg_user_btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frg_user_btn_send_logs" />

    <TextView
        android:id="@+id/frg_user_tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/version"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>

