<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/act_book_root_view"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/md_grey_200">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:transitionName="app_bar_transition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:transitionName="toolbar_transition"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/act_book_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/act_book_base_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_normal"
                >

                <ImageView
                    android:id="@+id/act_book_iv_book"
                    android:layout_width="170dp"
                    android:layout_height="250dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/image_placeholder"
                    android:transitionName="book_image_transition"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/act_book_tv_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:ellipsize="end"
                    android:lines="3"
                    android:maxLines="3"
                    android:textColor="@android:color/black"
                    android:transitionName="book_title_transition"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/act_book_iv_book"
                    app:layout_constraintTop_toTopOf="@+id/act_book_iv_book"
                    tools:text="Title"/>

                <TextView
                    android:id="@+id/act_book_tv_release_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_tv_release_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_title"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_title"/>

                <TextView
                    android:id="@+id/act_book_tv_available"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_available"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_release_date"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_release_date"/>

                <TextView
                    android:id="@+id/act_book_tv_approx_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_approx_length"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_available"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_available"/>

                <TextView
                    android:id="@+id/act_book_tv_author"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_author"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_approx_length"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_approx_length"/>

                <TextView
                    android:id="@+id/act_book_tv_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_language"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_author"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_author"/>

                <TextView
                    android:id="@+id/act_book_tv_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:text="@string/act_book_tv_rating"
                    app:layout_constraintLeft_toLeftOf="@+id/act_book_tv_language"
                    app:layout_constraintTop_toBottomOf="@+id/act_book_tv_language"/>

                <RatingBar
                    android:id="@+id/act_book_rating_bar"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_smaller"
                    android:numStars="5"
                    app:layout_constraintBottom_toBottomOf="@+id/act_book_tv_rating"
                    app:layout_constraintStart_toEndOf="@+id/act_book_tv_rating"
                    app:layout_constraintTop_toTopOf="@+id/act_book_tv_rating"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/act_book_container_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                >

                <Button
                    android:id="@+id/act_book_btn_chapters"
                    style="@style/AppButtonTheme.NormalHeight"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/spacing_smallest"
                    android:layout_marginEnd="@dimen/spacing_smallest"
                    android:text="@string/chapters"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@+id/act_book_btn_renew"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Button
                    android:id="@+id/act_book_btn_renew"
                    style="@style/AppButtonTheme.NormalHeight"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/spacing_smallest"
                    android:layout_marginEnd="@dimen/spacing_smallest"
                    android:text="@string/renew"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/act_book_btn_chapters"/>

            </android.support.constraint.ConstraintLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/act_book_cv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginEnd="@dimen/spacing_normal"
                android:elevation="10dp"
                android:transitionName="book_description_root_layout">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/spacing_normal">

                    <TextView
                        android:id="@+id/act_book_tv_title_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_largest"
                        android:transitionName="description_title_text_transition"/>

                    <TextView
                        android:id="@+id/act_book_tv_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_smaller"
                        android:ellipsize="end"
                        android:maxLines="6"
                        android:minLines="2"
                        android:transitionName="description_text_transition"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/act_book_tv_title_description"
                        />

                    <Button
                        android:id="@+id/act_book_btn_read_more_desc"
                        style="@style/AppButtonTheme.Login"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_smaller"
                        android:text="@string/read_more"
                        android:textColor="@color/colorPrimary"
                        android:transitionName="description_btn_expand_collape"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/act_book_tv_description"
                        />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <com.zennex.trl3lg.presentation.utils.view.WrapContentViewPager
                android:id="@+id/act_book_my_rating_view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"

                />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:layout_marginStart="@dimen/spacing_normal"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reviews"
                            android:layout_margin="@dimen/spacing_normal"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/font_largest"
                            />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/act_book_recycler_view_reviews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            />

                        <ProgressBar
                            android:id="@+id/act_book_reviews_pb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone"
                            />

                        <TextView
                            android:id="@+id/act_book_reviews_empty_view"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:padding="@dimen/spacing_normal"
                            android:text="@string/no_reviews"
                            android:visibility="gone"
                            />

                        <Button
                            android:id="@+id/act_book_btn_read_all_reviews"
                            style="@style/AppButtonTheme.Login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/spacing_normal"
                            android:text="@string/read_all_reviews"
                            android:textColor="@color/colorPrimary"
                            />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </FrameLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/act_book_btn_play"
        style="@style/AppFABTheme.Normal"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_play"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</android.support.constraint.ConstraintLayout>