<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/review_card_height"
        android:layout_margin="@dimen/spacing_normal"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/frg_my_review_rating_tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_smaller"
                android:layout_marginRight="@dimen/spacing_smaller"
                android:layout_marginTop="@dimen/spacing_smaller"
                android:text="@string/rate_the_book"
                android:textColor="@color/md_black_1000"
                android:textSize="@dimen/font_large"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RatingBar
                android:id="@+id/frg_my_review_rating_bar"
                style="?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:scaleX=".7"
                android:scaleY=".7"
                android:stepSize="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_my_review_rating_tv_title"/>

            <TextView
                android:id="@+id/frg_my_review_rating_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_smaller"
                android:layout_marginRight="@dimen/spacing_smaller"
                android:text="@string/status"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frg_my_review_rating_bar"/>

            <Button
                android:id="@+id/frg_my_review_btn_next"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_height_normal"
                android:background="@android:color/transparent"
                android:text="@string/next"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>